# fast-rich

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAST_RICH_PLAN.md  Makefile  PROJECT_SUMMARY.md  README.md  RICH_RUST_PLAN.md  debug_crossterm.rs  export.html  handover.md  index.html  mkdocs.yml  sitemap.xml  syntax_output.txt
.github/: FUNDING.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
assets/: console_basics.tape  live.tape  make_screenshots.tape  markup_demo.tape  print_macros.tape  progress.tape  spinner_demo.tape  table_demo.tape
benches/: render_benchmark.rs
benchmarks/: bench_table.py  index.html
bindings/python/: Cargo.toml  FAST_RICH_PARITY.md  mkdocs.yml  pyproject.toml
bindings/python/benchmarks/: compare_performance.py
bindings/python/fast_rich/: __init__.py
bindings/python/rich_rust/: __init__.py
bindings/python/src/: align.rs  columns.rs  console.rs  filesize.rs  inspect.rs  layout.rs  lib.rs  live.rs  markdown.rs  panel.rs  progress.rs  prompt.rs  rule.rs  style.rs  syntax.rs  table.rs  text.rs  traceback.rs  tree.rs
bindings/python/tests/: reference_prompt.py  test_json_parity.py  test_markdown_parity.py  test_progress_parity.py  test_syntax_parity.py  test_traceback_parity.py  test_tree_parity.py
contributing/: index.html
docs/: CHANGELOG.md  api.md  benchmarks.md  getting-started.md  index.md  python_api.md  python_install.md  rust_examples.md  rust_getting_started.md  tutorial_dashboard.md
examples/: README.md  align_demo.rs  all_spinners_demo.rs  bar_demo.rs  box_styles.rs  check_colors.rs  (+57 more)
(+150 files in other folders)
