[package]
name = "rich-rust-py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for rich-rust"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rich_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
rich-rust = { path = "../..", version = "0.2.0", features = ["markdown", "syntax"] }
